# justoneapi-python

./: .gitignore  README.en.md  README.md  README.zh-CN.md  glossary.json  i18n-cache.json  pyproject.toml  requirements.txt
.github/: release.yml
.github/workflows/: auto-commit.yml  ci.yml  release.yml  sync-openapi.yml  sync-readme-openapi.yml
justoneapi/: __init__.py  _exceptions.py  _resource.py  _response.py  _transport.py  client.py  config.py  log.py
justoneapi/apis/: taobao.py
openapi/: public-api.json  public-api.normalized.json  sdk_overrides.yaml
scripts/: bump_version.py  diff_openapi.py  fetch_openapi.py  generate_sdk.py  normalize_openapi.py  update-readme-api-list.mjs
tests/: test_bump_version.py  test_codegen.py  test_generated_surface.py  test_integration_smoke.py  test_runtime.py
tools/: sdk_codegen.py
